Bug 303552 - Private Browsing mode is using old cookies from normal browsing
Summary: Private Browsing mode is using old cookies from normal browsing
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: latest git snapshot
Platform: unspecified Linux
: NOR major
Target Milestone: 2.0
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks: 305520
  Show dependency treegraph
 
Reported: 2012-07-15 12:19 UTC by Leszek Lesner
Modified: 2012-12-16 16:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leszek Lesner 2012-07-15 12:19:28 UTC
When I was logged into google and even when I close the browser and start it newly and choose private browsing. Going to google automatically logs me in. 
So the cookies in private browsing mode are loaded from my normal browsing session.

Reproducible: Always

Steps to Reproduce:
1. Load and login to google or any other site storing cookies
2. Go to private browsing mode and go to the same site

Actual Results:  
It loads the same cookies

Expected Results:  
It should not load the cookies from my normal browsing session and should store cookies if necessary in a dummy file which gets deleted after private browsing mode is turned off.
Comment 1 Andrea Diamantini 2012-07-20 14:56:53 UTC
I'm sorry I fear this problem comes from kdelibs. We probably won't be able to fix until kde 5.0
Comment 2 Leszek Lesner 2012-07-29 10:37:19 UTC
Hmm... what if you disable cookies completely (there is a setting for this) when ever private mode is activated ?
It would prevent loading the old cookies. The downside would be that new cookies would not be able to be stored even not temporary. But its definitely a better solution than now.
Comment 3 Andrea Diamantini 2012-12-12 17:58:55 UTC
Sorry. Clicked to move by accident... restoring position in rekonq bugs
Comment 4 Andrea Diamantini 2012-12-16 16:05:46 UTC
Git commit e3b8ece1ce004f2049481ceb668bf05ad3ae99f7 by Andrea Diamantini.
Committed on 16/12/2012 at 17:04.
Pushed by adjam into branch 'master'.

"Workaround" cookie management in private browsing mode

>From the note in webpage file:
I'm sorry I really cannot let KIO work as needed in private browsing
mode. The problem is basically cookie related. This way we lose some
features in private browsing mode, but we ensure PRIVACY!

This change cannot be reverted until a proper fix for KIO
(or the right workaround for rekonq) will be found.

M  +1    -4    src/tabwindow/tabwindow.cpp
M  +54   -57   src/webtab/webpage.cpp
M  +1    -1    src/webtab/webpage.h
M  +3    -2    src/webtab/webtab.cpp
M  +3    -1    src/webtab/webtab.h
M  +3    -2    src/webtab/webview.cpp
M  +3    -1    src/webtab/webview.h
M  +2    -16   src/webwindow/webwindow.cpp
M  +1    -6    src/webwindow/webwindow.h

http://commits.kde.org/rekonq/e3b8ece1ce004f2049481ceb668bf05ad3ae99f7